--- a/olivia.html
+++ b/olivia.html
@@ -41,28 +41,26 @@
     <section>
         <div class="main-container">
             <div class="image" data-aos="zoom-out" data-aos-duration="3000">
-                <img src="" alt="">
+                <img src="imagens\olivia.jpg" alt="">
             </div>
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700"> Eu sou <span>Olivia</span></h1>
                 <div class="typewriter" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900">
-                    Sou <span class="typewriter-text">Desenvolvedora Web & Estudante de DevOps</span><label for="">|</label>
+                    Sou <span z>Engenheria de IA</span>
                 </div>
                 <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">
-                    Apaixonada por tecnologia, sou desenvolvedora web e estudante de DevOps, sempre em busca de aprendizado e aprimoramento.  
-                    Tenho experiência na criação de sites responsivos, utilizando HTML, CSS, JavaScript e PHP.  
-                    Também atuo com computação em nuvem, focando em soluções na AWS para melhorar a arquitetura e escalabilidade dos sistemas.  
-                    Meu objetivo é criar experiências digitais eficientes e acessíveis, além de evoluir profissionalmente na área de tecnologia.
-                </p>
-                
+                Graduanda em Sistemas para Internet no IFPB, com experiência em desenvolvimento web
+                 (front-end e back-end). Faço parte do LARA, onde atuei em projetos de realidade virtual
+                  e ensino de programação para crianças. Conquistei o primeiro lugar em um hackathon e
+                   participei de iniciativas em computação em nuvem. Tenho experiência com Scrum,
+                    já liderei uma equipe de front-end e atuei na gestão. Após um estágio em machine learning,
+                     foquei em IA e computação em nuvem, conquistando a certificação Cloud Practitioner e buscando constante evolução na área.                
                 <div class="social-links">
-                    <a href="https://github.com/Apenassam" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.instagram.com/talytasamsilva/" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/talyta-sampaio-667610227/" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://github.com/oliviaoliva" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/olivia-da-costa-oliva/" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <div class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
-                    <a href="mailto:sampaio_talyta@hotmail.com">
+                    <a href="mailto:olivia.costa.oliva@icloud.com">
                         <button>Me envie um e-mail</button>
                     </a>
                 </div>
